apps/registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-ui
  template:
    metadata:
      labels:
        app: registry-ui
    spec:
      containers:
        - name: registry-ui
          image: docker.io/joxit/docker-registry-ui:static
          resources:
            requests:
              cpu: "50m"
              memory: "50Mi"
            limits:
              cpu: "250m"
              memory: "250Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
      annotations:
        diun.watch_repo: "true"
    spec:
      containers:
        - name: registry
          image: registry:2.7.1
          livenessProbe:
            httpGet:
              path: /debug/health
              port: 6969
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              cpu: "50m"
              memory: "50Mi"
            limits:
              cpu: "250m"
              memory: "250Mi"
          ports:
          - name: http
            containerPort: 5000
          volumeMounts:
          - name: image-store
            mountPath: "/var/lib/registry"
      volumes:
        - name: image-store
          persistentVolumeClaim:
            claimName: registry-image-store
