apps/registry/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: registry
  labels:
    app: registry
spec:
  selector:
    app: registry
  ports:
    - port: 5000
      targetPort: 5000
