apps/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/auth-url: "http://authelia.authelia.svc.cluster.local:9091/api/verify?auth=basic"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - registry.hubbe.club
  rules:
    - host: registry.hubbe.club
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: registry
              port:
                number: 5000
